<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Bagus Yogatama on 6/24/19 1:56 PM
  ~ Copyright (c) 2019 . All rights reserved.
  ~ Last modified 6/24/19 1:56 PM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/navigation_movies"
            android:title="@string/movies"
            android:icon="@drawable/ic_local_movies_white_24dp"
            app:showAsAction="always"/>
    <item
            android:id="@+id/navigation_tv"
            android:title="@string/tv_series"
            android:icon="@drawable/ic_live_tv_white_24dp"
            app:showAsAction="ifRoom"/>

    <item android:id="@+id/navigation_search"
          android:title="@string/search"
          android:icon="@drawable/ic_search"
          app:showAsAction="ifRoom"/>
</menu>