<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Bagus Yogatama on 6/24/19 11:49 AM
  ~ Copyright (c) 2019 . All rights reserved.
  ~ Last modified 6/24/19 11:49 AM
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_item"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_movie"/>

</androidx.constraintlayout.widget.ConstraintLayout>