<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Bagus Yogatama on 6/22/19 6:31 PM
  ~ Copyright (c) 2019 . All rights reserved.
  ~ Last modified 6/22/19 2:41 PM
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/parent_layout"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.main.main.MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorPrimary"
            app:titleTextColor="#ffffff"/>

    <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/menu_bottom_nav"
            android:background="#ffffff"
            app:elevation="1dp"/>

    <FrameLayout
            android:layout_width="match_parent"
                 android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>