...
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_border_24dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:layout_anchor="@id/nested_scroll_view"
...
